--- a/en/faq/index.html
+++ b/en/faq/index.html
@@ -95,7 +95,7 @@
       class="navigation w-nav"
     >
       <div class="navigation-container">
-        <a href="/" class="logo w-inline-block"
+        <a href="/en" class="logo w-inline-block"
           ><img
             class="image-3"
             src="https://assets-global.website-files.com/6600531b69736ba3db8a2bb1/6608036998a8fbb623d93825_logo%20eco.png"
@@ -114,7 +114,7 @@
           >
           <div class="bullet"></div>
           <a href="/en/faq" class="nav-link w-nav-link">FAQ</a
-          ><a href="/about" class="nav-link w-nav-link">About Us</a
+          ><a href="/en/about" class="nav-link w-nav-link">About Us</a
           ><a href="/" class="navigation-button w-nav-link">Français</a>
         </nav>
         <div class="menu-button w-nav-button">
