--- a/en/about/index.html
+++ b/en/about/index.html
@@ -95,7 +95,7 @@
       class="navigation w-nav"
     >
       <div class="navigation-container">
-        <a href="/" class="logo w-inline-block"
+        <a href="/en" class="logo w-inline-block"
           ><img
             class="image-3"
             src="https://assets-global.website-files.com/6600531b69736ba3db8a2bb1/6608036998a8fbb623d93825_logo%20eco.png"
@@ -158,7 +158,7 @@
     <div class="footer">
       <div class="container cc-footer">
         <div class="footer-column cc-footer">
-          <a href="/" class="navigation-logo w-inline-block"
+          <a href="/en" class="navigation-logo w-inline-block"
             ><img
               src="https://assets-global.website-files.com/6600531b69736ba3db8a2bb1/660808c36e37447b5b0bbb1c_logo%20eco.png.png"
               width="183"
@@ -170,8 +170,8 @@
           <div class="footer-links-list">
             <div class="footer-links-list">
               <a href="/#Contact" class="link-footer">Get a Quote</a
-              ><a href="/faq" class="link-footer">FAQ</a
-              ><a href="/about" class="link-footer">About Us</a>
+              ><a href="/en/about/" class="link-footer">FAQ</a
+              ><a href="/en/about" class="link-footer">About Us</a>
             </div>
           </div>
           <div class="footer-links-list">
