--- a/en/index.html
+++ b/en/index.html
@@ -102,7 +102,7 @@
       class="navigation w-nav"
     >
       <div class="navigation-container">
-        <a href="/" aria-current="page" class="logo w-inline-block w--current"
+        <a href="/en" aria-current="page" class="logo w-inline-block w--current"
           ><img
             class="image-3"
             src="https://assets-global.website-files.com/6600531b69736ba3db8a2bb1/6608036998a8fbb623d93825_logo%20eco.png"
@@ -120,8 +120,8 @@
             >514-545-9868</a
           >
           <div class="bullet"></div>
-          <a href="/faq" class="nav-link w-nav-link">FAQ</a
-          ><a href="/about" class="nav-link w-nav-link">About</a
+          <a href="/en/faq" class="nav-link w-nav-link">FAQ</a
+          ><a href="/en/about" class="nav-link w-nav-link">About</a
           ><a href="/" class="navigation-button w-nav-link">Français</a>
         </nav>
         <div class="menu-button w-nav-button">
