--- a/en/thank-you/index.html
+++ b/en/thank-you/index.html
@@ -101,7 +101,7 @@
       class="navigation w-nav"
     >
       <div class="navigation-container">
-        <a href="/" class="logo w-inline-block"
+        <a href="/en" class="logo w-inline-block"
           ><img
             class="image-3"
             src="https://assets-global.website-files.com/6600531b69736ba3db8a2bb1/6608036998a8fbb623d93825_logo%20eco.png"
@@ -119,8 +119,8 @@
             >514-545-9868</a
           >
           <div class="bullet"></div>
-          <a href="/faq" class="nav-link w-nav-link">FAQ</a
-          ><a href="/a-propos" class="nav-link w-nav-link">About Us</a
+          <a href="/en/faq" class="nav-link w-nav-link">FAQ</a
+          ><a href="/en/about" class="nav-link w-nav-link">About Us</a
           ><a href="/" class="navigation-button w-nav-link">Français</a>
         </nav>
         <div class="menu-button w-nav-button">
