--- a/en/thank-you/index.html
+++ b/en/thank-you/index.html
@@ -153,7 +153,7 @@
     <div class="footer">
       <div class="container cc-footer">
         <div class="footer-column cc-footer">
-          <a href="/" class="navigation-logo w-inline-block"
+          <a href="/en" class="navigation-logo w-inline-block"
             ><img
               src="https://assets-global.website-files.com/6600531b69736ba3db8a2bb1/660808c36e37447b5b0bbb1c_logo%20eco.png.png"
               width="183"
