liens oubliés encore

--- a/en/index.html
+++ b/en/index.html
@@ -282,7 +282,7 @@
       <div class="container cc-footer">
         <div class="footer-column cc-footer">
           <a
-            href="/"
+            href="/en"
             aria-current="page"
             class="navigation-logo w-inline-block w--current"
             ><img
