--- a/en/about/index.html
+++ b/en/about/index.html
@@ -114,7 +114,7 @@
           >
           <div class="bullet"></div>
           <a href="/faq" class="nav-link w-nav-link">FAQ</a
-          ><a href="/a-propos" class="nav-link w-nav-link">About Us</a
+          ><a href="/a-propos" class="nav-link w-nav-link">About</a
           ><a href="/" class="navigation-button w-nav-link">Français</a>
         </nav>
         <div class="menu-button w-nav-button">
@@ -169,9 +169,9 @@
         <div class="footer-column">
           <div class="footer-links-list">
             <div class="footer-links-list">
-              <a href="/#Contact" class="link-footer">Get a Quote</a
-              ><a href="/en/about/" class="link-footer">FAQ</a
-              ><a href="/en/about" class="link-footer">About Us</a>
+              <a href="/en/#Contact" class="link-footer">Get a Quote</a
+              ><a href="/en/faq" class="link-footer">FAQ</a
+              ><a href="/en/about" class="link-footer">About</a>
             </div>
           </div>
           <div class="footer-links-list">
