--- a/en/index.html
+++ b/en/index.html
@@ -295,9 +295,9 @@
         <div class="footer-column">
           <div class="footer-links-list">
             <div class="footer-links-list">
-              <a href="/#Contact" class="link-footer">Get a Quote</a
-              ><a href="/faq" class="link-footer">FAQ</a
-              ><a href="/about" class="link-footer">About</a>
+              <a href="/en/#Contact" class="link-footer">Get a Quote</a
+              ><a href="/en/faq" class="link-footer">FAQ</a
+              ><a href="/en/about" class="link-footer">About</a>
             </div>
           </div>
           <div class="footer-links-list">
