--- a/en/about/index.html
+++ b/en/about/index.html
@@ -113,7 +113,7 @@
             >514-545-9868</a
           >
           <div class="bullet"></div>
-          <a href="/faq" class="nav-link w-nav-link">FAQ</a
+          <a href="/en/faq" class="nav-link w-nav-link">FAQ</a
           ><a href="/a-propos" class="nav-link w-nav-link">About</a
           ><a href="/" class="navigation-button w-nav-link">Français</a>
         </nav>
