--- a/en/about/index.html
+++ b/en/about/index.html
@@ -180,15 +180,19 @@
             ><a href="tel:+15145459868" class="link-footer">514-545-9868</a>
           </div>
           <div class="footer-social">
-            <a href="#" class="link-social w-inline-block"
+            <a
+              href="https://www.facebook.com/profile.php?id=61557608896623"
+              class="link-social w-inline-block"
               ><img
                 src="https://assets-global.website-files.com/5b680680f109cf5a2fd941ab/5b68459df109cf0cf0d97867_icon-facebook.svg"
-                alt="" /></a
-            ><a href="#" class="link-social w-inline-block"
+                alt="Facebook" /></a
+            ><a
+              href="https://www.instagram.com/eco.pelouse/"
+              class="link-social w-inline-block"
               ><img
                 src="https://assets-global.website-files.com/5b680680f109cf5a2fd941ab/5b6846535b239d7ba536b158_icon-instagram.svg"
-                alt="" /></a
-            ><a href="#" class="link-social w-inline-block"></a>
+                alt="Instagram"
+            /></a>
           </div>
         </div>
       </div>
