--- a/merci/index.html
+++ b/merci/index.html
@@ -85,6 +85,9 @@
         font-feature-settings: "liga" on;
         text-rendering: optimizeLegibility;
       }
+      .w-webflow-badge {
+        display: none !important;
+      }
     </style>
   </head>
   <body>
