dernier liens en

--- a/en/thank-you/index.html
+++ b/en/thank-you/index.html
@@ -143,7 +143,7 @@
               to our </strong
             ><a href="/en"><strong>homepage</strong></a
             ><strong> or learn more </strong
-            ><a href="/about"><strong>about us</strong></a
+            ><a href="/en/about"><strong>about us</strong></a
             ><strong>.</strong>
           </p>
         </div>
