--- a/en/index.html
+++ b/en/index.html
@@ -250,7 +250,7 @@
               name="Address"
               data-name="Address"
               placeholder=""
-              type="email"
+              type="text"
               id="Address"
               required=""
             /><label for="Info-sup">Additional Information</label
