--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
               name="Adresse"
               data-name="Adresse"
               placeholder=""
-              type="email"
+              type="text"
               id="Adresse"
               required=""
             /><label for="Info-sup">Information supplémentaire</label
