--- a/index.html
+++ b/index.html
@@ -267,7 +267,12 @@
               placeholder=""
               type="text"
               id="Info-sup"
-            /><input
+            />
+            <p class="small-text cc-light" style="margin-bottom: 10px">
+              En soumettant ce formulaire, vous acceptez d'être contacté à des
+              fins commerciales
+            </p>
+            <input
               type="submit"
               data-wait="Attente..."
               class="w-button"
