--- a/en/index.html
+++ b/en/index.html
@@ -262,7 +262,12 @@
               placeholder=""
               type="text"
               id="Info-sup"
-            /><input
+            />
+            <p class="small-text cc-light" style="margin-bottom: 10px">
+              By submitting this form, you agree to be contacted for commercial
+              purposes.
+            </p>
+            <input
               type="submit"
               data-wait="Please wait..."
               class="w-button"
