consent sans point

--- a/en/index.html
+++ b/en/index.html
@@ -265,7 +265,7 @@
             />
             <p class="small-text cc-light" style="margin-bottom: 10px">
               By submitting this form, you agree to be contacted for commercial
-              purposes.
+              purposes
             </p>
             <input
               type="submit"
