qq changements textuels

--- a/a-propos/index.html
+++ b/a-propos/index.html
@@ -129,17 +129,17 @@
     <div class="contact-intro">
       <div class="w-layout-blockcontainer w-container">
         <div class="contact-info-text">
-          Nous formons un duo de jeunes entrepreneurs passionnés par
-          l&#x27;environnement et déterminés à faire une différence dans notre
-          communauté. Chez éCo pelouse, nous croyons en la puissance de
-          l&#x27;innovation et de l&#x27;engagement pour créer un avenir plus
-          durable et plus vert.<br /><br />Notre histoire a commencé avec une
-          vision simple : offrir un service respectueux de l&#x27;environnement
-          sans compromettre la qualité. Animés par notre amour pour la nature et
-          notre désir de préserver notre planète pour les générations futures,
-          nous avons fondé éCo pelouse avec l&#x27;objectif de changer la façon
-          dont les pelouses sont entretenues. Le nom incarne notre engagement
-          envers l&#x27;environnement. En choisissant une orthographe qui met
+          Chez éCo pelouse, nous sommes passionnés par l&#x27;environnement et
+          déterminés à faire une différence dans notre communauté. Nous croyons
+          en la puissance de l&#x27;innovation et de l&#x27;engagement pour
+          créer un avenir plus durable et plus vert.<br /><br />Notre histoire a
+          commencé avec une vision simple : offrir un service respectueux de
+          l&#x27;environnement sans compromettre la qualité. Animés par notre
+          amour pour la nature et notre désir de préserver notre planète pour
+          les générations futures, nous avons fondé éCo pelouse avec
+          l&#x27;objectif de changer la façon dont les pelouses sont
+          entretenues. Le nom incarne notre engagement envers
+          l&#x27;environnement. En choisissant une orthographe qui met
           l&#x27;accent sur le C de carbone, nous soulignons notre engagement à
           réduire les émissions de carbone associées à l&#x27;entretien des
           pelouses.<br /><br />En tant que jeunes entrepreneurs, nous apportons
@@ -170,7 +170,7 @@
               width="183"
               alt="éCo pelouse"
           /></a>
-          <div class="text-footer-credits">© 2024 éCo pelouse</div>
+          <div class="text-footer-credits">© 2024 éCo pelouse s.e.n.c.</div>
         </div>
         <div class="footer-column">
           <div class="footer-links-list">
