--- a/en/about/index.html
+++ b/en/about/index.html
@@ -129,18 +129,18 @@
     <div class="contact-intro">
       <div class="w-layout-blockcontainer w-container">
         <div class="contact-info-text">
-          We are a duo of young entrepreneurs passionate about the environment
-          and determined to make a difference in our community. At éCo pelouse,
-          we believe in the power of innovation and commitment to create a more
-          sustainable and greener future.<br /><br />Our story began with a
-          simple vision: to offer an environmentally friendly service without
-          compromising on quality. Driven by our love for nature and our desire
-          to preserve our planet for future generations, we founded éCo pelouse
-          with the goal of changing the way lawns are maintained. The name
-          embodies our commitment to the environment. By choosing a spelling
-          that emphasizes the C of carbon, we underline our commitment to
-          reducing carbon emissions associated with lawn maintenance.<br /><br />As
-          young entrepreneurs, we bring a unique energy and creativity to our
+          At éCo pelouse, we are passionate about the environment and determined
+          to make a difference in our community. We believe in the power of
+          innovation and commitment to create a more sustainable and greener
+          future.<br /><br />Our story began with a simple vision: to offer an
+          environmentally friendly service without compromising on quality.
+          Driven by our love for nature and our desire to preserve our planet
+          for future generations, we founded éCo pelouse with the goal of
+          changing the way lawns are maintained. The name embodies our
+          commitment to the environment. By choosing a spelling that emphasizes
+          the C of carbon, we underline our commitment to reducing carbon
+          emissions associated with lawn maintenance.<br /><br />As young
+          entrepreneurs, we bring a unique energy and creativity to our
           business. We are constantly looking for new ideas and innovative
           solutions to meet the needs of our customers while respecting our
           commitment to the environment. We use exclusively electric mowers
@@ -164,7 +164,7 @@
               width="183"
               alt="éCo pelouse"
           /></a>
-          <div class="text-footer-credits">© 2024 éCo pelouse</div>
+          <div class="text-footer-credits">© 2024 éCo pelouse s.e.n.c.</div>
         </div>
         <div class="footer-column">
           <div class="footer-links-list">
