--- a/en/index.html
+++ b/en/index.html
@@ -295,7 +295,7 @@
               width="183"
               alt="éCo pelouse"
           /></a>
-          <div class="text-footer-credits">© 2024 éCo pelouse</div>
+          <div class="text-footer-credits">© 2024 éCo pelouse s.e.n.c.</div>
         </div>
         <div class="footer-column">
           <div class="footer-links-list">
