bot question for form + small faq modifs

--- a/en/faq/index.html
+++ b/en/faq/index.html
@@ -135,8 +135,8 @@
               <div class="questions">How often do you mow the lawn?</div>
               <div class="pricing-block-separator"></div>
               <div class="small-text cc-light">
-                We mow the lawn every 7 to 10 days, depending on weather
-                conditions
+                We generally mow the lawn every 7 to 10 days, however the
+                frequency can vary based on weather conditions and grass growth
               </div>
             </div>
           </div>
@@ -167,19 +167,18 @@
               <div class="questions">What is the duration of the contract?</div>
               <div class="pricing-block-separator"></div>
               <div class="small-text cc-light">
-                The contract duration is from mid-May to mid-September
+                The contract duration is from mid-May to mid-October
               </div>
             </div>
           </div>
           <div class="pricing-block">
             <div class="pricing-info">
               <div class="questions">
-                Do you offer seasonal packages or annual contracts for lawn
-                maintenance?
+                Do you offer seasonal contracts for lawn maintenance?
               </div>
               <div class="pricing-block-separator"></div>
               <div class="small-text cc-light">
-                We offer seasonal packages for lawn maintenance
+                Yes, we offer seasonal contracts for lawn maintenance
               </div>
             </div>
           </div>
