--- a/en/index.html
+++ b/en/index.html
@@ -263,6 +263,13 @@
               type="text"
               id="Info-sup"
             />
+            <input
+              type="text"
+              name="_gotcha"
+              tabindex="-1"
+              autocomplete="off"
+              style="display: none"
+            />
             <p class="small-text cc-light" style="margin-bottom: 10px">
               By submitting this form, you agree to be contacted for commercial
               purposes
