--- a/faq/index.html
+++ b/faq/index.html
@@ -137,8 +137,9 @@
               </div>
               <div class="pricing-block-separator"></div>
               <div class="small-text cc-light">
-                Nous effectuons la tonte tous les 7 à 10 jours, en fonction des
-                conditions météo
+                Nous effectuons généralement la tonte tous les 7 à 10 jours,
+                mais la fréquence peut varier en fonction des conditions météo
+                et de la croissance du gazon
               </div>
             </div>
           </div>
@@ -171,20 +172,20 @@
               <div class="questions">Quelle est la durée du contrat?</div>
               <div class="pricing-block-separator"></div>
               <div class="small-text cc-light">
-                La durée du contrat est de la mi-mai à la mi-septembre
+                La durée du contrat est de la mi-mai à la mi-octobre
               </div>
             </div>
           </div>
           <div class="pricing-block">
             <div class="pricing-info">
               <div class="questions">
-                Proposez-vous des forfaits saisonniers ou des contrats annuels
-                pour l&#x27;entretien de la pelouse ?
+                Proposez-vous des forfaits saisonniers pour l&#x27;entretien de
+                la pelouse ?
               </div>
               <div class="pricing-block-separator"></div>
               <div class="small-text cc-light">
-                Nous proposons des forfaits saisonniers pour l&#x27;entretien de
-                la pelouse
+                Oui, nous proposons des forfaits saisonniers pour
+                l&#x27;entretien de la pelouse
               </div>
             </div>
           </div>
