--- a/index.html
+++ b/index.html
@@ -268,6 +268,13 @@
               type="text"
               id="Info-sup"
             />
+            <input
+              type="text"
+              name="_gotcha"
+              tabindex="-1"
+              autocomplete="off"
+              style="display: none"
+            />
             <p class="small-text cc-light" style="margin-bottom: 10px">
               En soumettant ce formulaire, vous acceptez d'être contacté à des
               fins commerciales
